--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,10 @@ h1 {
 }
 
 h3 {
-    font-size: 3.2rem;
+    font-size: 4.2rem;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 15rem;
+    margin-bottom: 4rem;
 }
     
 .container {
@@ -47,4 +47,41 @@ h3 {
 .flex-center {
     justify-content: center;
     align-items: center;
+}
+
+.text-ceneter {
+    text-align: center;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.btn {
+    font-size: 2.6rem;
+    padding: 2rem 0;
+    width: 30rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    color: firebrick;
+    border-style: solid;
+    background-color: black;
+    border-radius: 4px;
+
+}
+
+.btn:hover {
+    cursor: pointer;
+    transform: scale(1.02);
+
+}
+
+.fa-crown, .fa-play {
+    font-size: 2.5rem;
+    margin-left: 1rem;
 }
