--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,13 @@ body {
     font-family: 'oswald', sans-serif;
 }
 
+#heading {
+    border-style: solid;
+    background-color: black;
+    border-radius: 20px 20px;
+   
+}
+
 h1 {
     font-size: 6.4rem;
     color: #fff;
