--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ h1 {
     color: #fff;
     text-align: center;
     font-stretch: expanded;
+    cursor: pointer;
 }
 
 h3 {
@@ -56,16 +57,21 @@ h3 {
     align-items: center;
 }
 
-.text-ceneter {
-    text-align: center;
-}
-
-.justify-center {
-    justify-content: center;
-}
-
 .hidden {
     display: none;
+}
+
+label {
+    font-size: 25px;
+    padding: 5px;
+    margin-top: 5px;   
+}
+
+input {
+    font-size: 15px;
+    text-align: center;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .btn {
@@ -91,4 +97,12 @@ h3 {
 .fa-crown, .fa-play {
     font-size: 2.5rem;
     margin-left: 1rem;
+}
+
+#quiz-container{
+    display: none;
+}
+
+#high-score-container{
+    display: none;
 }
