--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -91,3 +91,10 @@ footer {
     font-size: 3.7rem;
     color: #fff;
 }
+
+@media screen and (max-width: 768px) {
+    .choice-container {
+        min-width: 40rem;
+    }
+    
+}
