--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,21 +64,6 @@ h3 {
     display: none;
 }
 
-label {
-    font-size: 25px;
-    padding: 5px;
-    margin-top: 5px;
-    text-decoration: underline;
-    font-weight: bolder;
-}
-
-input {
-    font-size: 15px;
-    text-align: center;
-    margin-bottom: 10px;
-    cursor: pointer;
-}
-
 .btn {
     font-size: 2.6rem;
     padding: 2rem 0;
@@ -129,3 +114,43 @@ footer {
     font-size: 3.7rem;
     color: #fff;
 }
+
+.end-form-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30rem;
+
+}
+
+input {
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.8rem;
+    border: none;
+}
+
+input::placeholder {
+    color: #aaa;
+}
+
+#username {
+    margin-bottom: 3rem;
+    width: 100%;
+    outline: none;
+}
+
+#end-text {
+    font-size: 2.4rem;
+    text-align: center;
+    color: #fff;
+}
+
+#saveScoreBtn {
+    border: none;
+}
+
+
+
