--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,13 +13,12 @@ body {
 }
 
 #heading {
-    border-style: solid;
     background-color: black;
    
 }
 
 h1 {
-    font-size: 6.4rem;
+    font-size: 6.8rem;
     color: #fff;
     text-align: center;
     font-stretch: expanded;
@@ -31,6 +30,7 @@ h3 {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 4rem;
+    text-align: center;
 }
     
 .container {
@@ -40,7 +40,7 @@ h3 {
     display: flex;
     justify-content: center;
     max-width: 80rem;
-    max-width: 0 auto;
+    max-width: 0;
     padding: 2rem;
     margin-left: auto;
     margin-right: auto;
@@ -143,7 +143,7 @@ input::placeholder {
 }
 
 #end-text {
-    font-size: 2.4rem;
+    font-size: 3.2rem;
     text-align: center;
     color: #fff;
 }
