Added media queries to css and addded a home icon to the go home button

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -124,3 +124,11 @@ footer {
     }
     
 }
+
+@media screen and (max-width: 500px) {
+    .choice-container {
+        min-width: 20rem;
+        margin-right: 50px;
+    }
+    
+}
