--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ h3 {
 
 }
 
-.fa-crown, .fa-play {
+.fa-crown, .fa-play, .fa-home {
     font-size: 2.5rem;
     margin-left: 1rem;
 }
@@ -150,6 +150,3 @@ input::placeholder {
 #saveScoreBtn {
     border: none;
 }
-
-
-
