--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -24,12 +24,14 @@ body {
 
 .choice-container {
     display: flex;
-    margin-bottom: 0.9rem;
+    margin-bottom: 1rem;
     width: 100%;
     border-radius: 4px;
     background: firebrick;
     font-size: 3rem;
     min-width: 80rem;
+    height: 5.8rem;
+   
 }
 
 .choice-container:hover {
