--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,11 +29,11 @@ h3 {
     font-size: 4.2rem;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
     text-align: center;
 }
-    
-.container {
+
+    .container {
     width: 100vw;
     height: 100vh;
     align-items: center;
@@ -41,7 +41,7 @@ h3 {
     justify-content: center;
     max-width: 80rem;
     max-width: 0;
-    padding: 2rem;
+    padding-bottom: 8rem;
     margin-left: auto;
     margin-right: auto;
 }
