--- a/assets/css/highscores.css
+++ b/assets/css/highscores.css
@@ -16,3 +16,9 @@ body {
     background-color: black;
 }
 
+@media screen and (max-width: 500px) {
+    img {
+      height: 100px;
+      width: 100px;
+    }
+}
